[package]
name = "minos"
version = "0.3.1"
authors = ["Jordi Polo Carres <mumismo@gmail.com>"]
description = """
Minos is a command line tool to generate and run scenarios against
APIs described by OpenAPI files.
"""
homepage = "https://github.com/JordiPolo/minos"
repository = "https://github.com/JordiPolo/minos"
readme = "README.md"
keywords = ["openapi", "testing", "cli"]
categories = ["command-line-utilities", "api"]
license = "Unlicense OR MIT"
autotests = false

edition = "2018"

# [workspace]
# members = [
#   "crates/daedalus"
# ]

[dependencies]
regex = "1.0"
serde_json = "1.0"
daedalus = { path = "crates/daedalus" }

termcolor = "1.0"
rand = "0.7"
openapiv3 = "0.3"
#openapi_utils = { path = "../../oasproxy/openapi_utils" }
openapi_utils = "0.2"
thiserror = "1.0"
valico = "3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"

itertools = "0.9"
comfy-table = "1.0"
lazy_static = "*"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
hyper = "*"
http = "*"
tokio = { version = "0.2", features = ["full"] }
#mauth-client = { path = "../mauth-client-rust"}
indicatif = "*"

#gumdrop = "0.8"
clap = "3.0.0-beta.1"
[dependencies.goose]
version = "0.9"
default-features = false
features = ["rustls"]
#git = "https://github.com/tag1consulting/goose"


[profile.dev]
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 # better optimizations
incremental = false
panic = 'abort'
