[package]
name = "minos"
version = "0.3.1"
authors = ["Jordi Polo Carres <mumismo@gmail.com>"]
description = """
Minos is a command line tool to generate and run scenarios against
APIs described by OpenAPI files.
"""
homepage = "https://github.com/JordiPolo/minos"
repository = "https://github.com/JordiPolo/minos"
readme = "README.md"
keywords = ["openapi", "testing", "cli"]
categories = ["command-line-utilities", "api"]
license = "Unlicense OR MIT"
autotests = false

edition = "2018"

[dependencies]
regex = "1.0"
serde_json = "1.0"
daedalus = { path = "crates/daedalus" }

termcolor = "1.0"
rand = "0.8"
openapiv3 = "0.3"
#openapi_utils = { path = "../../oasproxy/openapi_utils" }
openapi_utils = "0.2"
thiserror = "1.0"
valico = "3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"

itertools = "0.10"
comfy-table = "2.0"
lazy_static = "*"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "stream", "runtime"] }
http = "*"
tokio = { version = "0.2", features = ["full"] }
mauth-client = "*"
indicatif = "*"
# clap = "3.0.0-beta.1"
gumdrop = "*"




[dependencies.clap]
#version = "0.9"
# default-features = false
# features = ["rustls"]

git = "https://github.com/clap-rs/clap.git"
rev = "v3.0.0-beta.2"
#rev = "90622b397e3d5bd6bdcecfbf1488b13f5a3f8301"
#rev = "e4c2d09"



[dependencies.goose]
#version = "0.10.7"
default-features = false
features = ["rustls"]

git = "https://github.com/tag1consulting/goose"
rev = "59d7e90"


[profile.dev]
debug = 0

[profile.release]
opt-level = 3
lto = true
#codegen-units = 1 # better optimizations
incremental = false
panic = 'abort'
debug = true
