[package]
name = "daedalus"
version = "0.1.0"
authors = ["Jordi Polo <mumismo@gmail.com>"]
description = ""
edition = "2018"

documentation = "https://docs.rs/grep-matcher"
homepage = "https://github.com/JordiPolo/minos/tree/master/crates/generator"
repository = "https://github.com/JordiPolo/minos/tree/master/crates/generator"
readme = "README.md"
keywords = []
license = "MIT"
autotests = false

[dependencies]
regex = "1.0"
serde = "1.0"
serde_yaml = "0.8"

uuid = { version = ">= 0.6", features = ["v4"] }
thiserror = "1.0"
chrono = "0.4"
openapiv3 = "0.3"
#openapi_utils = { path = "../../../../oasproxy/openapi_utils" }
openapi_utils = "0.2"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
rand = "0.8"
shellexpand = "2.0"
itertools = "0.10"
lazy_static = "*"
http = "*"
